Data prep class files updated. Sorting rows command commented.

--- a/notebook_main-ciclo_deploy.ipynb
+++ b/notebook_main-ciclo_deploy.ipynb
@@ -9307,7 +9307,7 @@
     "        test_raw.loc[test_raw.index, 'Rank'] = predictions[:,1]\n",
     "        \n",
     "        # return data sorted by Rank\n",
-    "        test_raw = test_raw.sort_values('Rank', ascending=False)\n",
+    "        #test_raw = test_raw.sort_values('Rank', ascending=False)\n",
     "        \n",
     "        \n",
     "        return test_raw.to_json(orient='records', date_format='iso')    \n"
